Fix: text overflow inside input

--- a/src/components/convert/convert.less
+++ b/src/components/convert/convert.less
@@ -61,6 +61,8 @@
 				-webkit-appearance: none;
 				margin: 0;
 			}
+
+			text-overflow: ellipsis;
 		}
 
 		img {
